--- a/package.json
+++ b/package.json
@@ -1,6 +1,11 @@
 {
   "dependencies": {
-    "tailwindcss": "^4.1.11",
+    "@tailwindcss/cli": "^4.1.11",
     "task-master-ai": "^0.23.0"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.11"
   }
 }
